fix: play video button is cropped

--- a/src/dotnet/UI.Blazor/Components/VideoAttachmentThumbnail/video-thumbnail.css
+++ b/src/dotnet/UI.Blazor/Components/VideoAttachmentThumbnail/video-thumbnail.css
@@ -3,7 +3,7 @@
 }
 .video-thumbnail .c-overlay {
     @apply absolute top-1/2 left-1/2;
-    @apply flex flex-x h-15 w-15 -mt-7.5 -ml-7.5 rounded-full items-center justify-center;
+    @apply flex flex-x h-12 w-12 -mt-6 -ml-6 rounded-full items-center justify-center;
     @apply backdrop-brightness-50;
 }
 .video-thumbnail .c-play {
